iac/k8s/longhorn/ingress-applied.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{},"name":"longhorn-ingress","namespace":"longhorn-system"},"spec":{"rules":[{"host":"longhorn.dungxbuif.com","http":{"paths":[{"backend":{"service":{"name":"longhorn-frontend","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}]}}
  creationTimestamp: "2026-06-03T04:19:42Z"
  generation: 1
  name: longhorn-ingress
  namespace: longhorn-system
  resourceVersion: "23459"
  uid: 41c322e1-1141-49c4-9980-63d56e1ecded
spec:
  rules:
  - host: longhorn.dungxbuif.com
    http:
      paths:
      - backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
        path: /
        pathType: Prefix
status:
  loadBalancer: {}
